@@ -1,5 +1,6 @@
 Version 0.3.0 (2014-xx-xx)
 --------------------------
+Changed the return value of the tracking methods to a tuple (#65)
 Added coveralls code coverage button (#64)
 Added currency parameter to ecommerce tracking methods (#62)
 Added config option to disable contracts (#61)
@@ -7,7 +8,7 @@ Added event_vendor as argument to track_unstruct_event (#54)
 Added classifiers to setup.py (#48)
 Added support for custom context to all track() methods (#38)
 Updated Tracker constructor to use map of optional args (#37)
-Updated so a transaction and its items have the same txnid and dtm (#25) (TODO)
+Updated so a transaction and its items have the same txnid and dtm (#25)
 
 Version 0.2.0 (2014-04-15)
 --------------------------
